@@ -1,5 +1,10 @@
 0.1637
   renamed dbi_options to dbi_option. dbi_options is available, but deprecated.
+  renamed DBIx::Custom::TagProcessor to DBIx::Custom::Tag, and function names is cleanuped.
+  renamed register_tag_processor to register_tag. register_tag_processor is available, but deprecated.
+  renamed tag_processors to tags. tag_prosessors is available, but deprecated.
+  improved error message
+  build all clause if param is undefined.
 0.1636
   added tests and cleanup
 0.1635
